[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.7"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2.0.6"
